some very basic stuff

--- a/electron-quick-start/index.html
+++ b/electron-quick-start/index.html
@@ -4,18 +4,22 @@
     <title>Ranui</title>
     <link rel="stylesheet" href="css/ranui.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/jquery-3.1.1.min.js"></script>
+    <script>window.$ = window.jQuery = require('./js/jquery-3.1.1.min.js')</script>
     <script src="js/humaninput-1.1.13.min.js"></script>
   </head>
   <body class="">
     <doc>
-      <el tabs="0">div<prop>class</prop><val>something</val></el>
-      <el tabs="0" class="selected">div<prop>class</prop><val>something</val></el>
-      <el tabs="0">div<prop class="selected">class</prop><val>something</val></el>
-      <txt tabs="1">plaintext</txt>
-      <txt tabs="1" class="selected">plaintext</txt>
+      <row tabs="0"><tag name="div">div</tag><prop name="class">class</prop><val>something</val></row>
+      <row tabs="1"><tag name="div">div</tag><prop name="class">class</prop><val class="sel">something</val></row>
+      <row tabs="2"><tag name="div">div</tag></row>
+      <row tabs="0"><tag name="div">div</tag><prop name="div" class="sel">class</prop><val>something</val></row>
+      <row tabs="1"><txt>plaintext</txt></row>
+      <row tabs="1"><txt class="sel">plaintext</txt></row>
     </doc>
 
+    <script src="js/utils.js"></script>
+    <script src="js/selection.js"></script>
+    <script src="js/editing.js"></script>
     <script src="js/ranui.js"></script>
   </body>
 </html>
