--- a/electron-quick-start/index.html
+++ b/electron-quick-start/index.html
@@ -9,15 +9,16 @@
   </head>
   <body class="">
     <doc>
-      <row tabs="0"><tag name="div">div</tag><prop name="class">class</prop><val>something</val></row>
-      <row tabs="1"><tag name="div">div</tag><prop name="class">class</prop><val class="sel">something</val></row>
-      <row tabs="2"><tag name="div">div</tag></row>
-      <row tabs="0"><tag name="div">div</tag><prop name="div" class="sel">class</prop><val>something</val></row>
-      <row tabs="1"><txt>plaintext</txt></row>
-      <row tabs="1"><txt class="sel">plaintext</txt></row>
+      <row tabs="0"><tag text="div">div</tag><prop text="class">class</prop><val text="something">something</val></row>
+      <row class="hilite" tabs="1"><tag text="div">div</tag><prop text="class">class</prop><val class="cur sel" text="something">something</val></row>
+      <row tabs="2"><tag text="div">div</tag></row>
+      <row class="hilite" tabs="0"><tag text="div">div</tag><prop text="class" class="cur sel">class</prop><val text="something">something</val></row>
+      <row tabs="1"><txt text="plaintext">plaintext</txt></row>
+      <row class="hilite" tabs="1"><txt class="cur sel" text="plaintext">plaintext</txt></row>
     </doc>
 
     <script src="js/utils.js"></script>
+    <script src="js/history.js"></script>
     <script src="js/selection.js"></script>
     <script src="js/editing.js"></script>
     <script src="js/ranui.js"></script>
