undo seems to be working

--- a/electron-quick-start/index.html
+++ b/electron-quick-start/index.html
@@ -9,8 +9,8 @@
   </head>
   <body class="">
     <doc>
-      <row tabs="0"><tag text="div">div</tag><prop text="class">class</prop><val text="something">something</val></row>
-      <row class="hilite" tabs="1"><tag text="div">div</tag><prop text="class">class</prop><val class="cur sel" text="something">something</val></row>
+      <row class="hilite" tabs="0"><tag text="div" class="cur sel">div</tag><prop text="class">class</prop><val text="something">something</val></row>
+      <row tabs="1"><tag text="div">div</tag><prop text="class">class</prop><val text="something">something</val></row>
       <row tabs="2"><tag text="div">div</tag></row>
       <row class="hilite" tabs="0"><tag text="div">div</tag><prop text="class" class="cur sel">class</prop><val text="something">something</val></row>
       <row tabs="1"><txt text="plaintext">plaintext</txt></row>
