drag ghost formatting

--- a/electron-quick-start/index.html
+++ b/electron-quick-start/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <doc>
-      <row class="hilite" tabs="0" type="tag"><tag text="div" class="cur sel">div</tag><prop text="class">class</prop><val text="something">something</val></row>
+      <row class="hilite" tabs="0" type="tag"><tag text="div" class="cur sel">div</tag><prop text="id">id</prop><val text="rules">rules</val></row>
       <row tabs="1" type="tag"><tag text="div">div</tag><prop text="class">class</prop><val text="something">something</val></row>
       <row tabs="2" type="tag"><tag text="div">div</tag></row>
       <row tabs="0" type="tag"><tag text="div">div</tag><prop text="class" class="cur sel">class</prop><val text="something">something</val></row>
