--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
     <!-- DEV DOC -->
     <doc>
-      <row tabs="0" type="tag"><tag text="div">div</tag><prop text="id" class="cur sel">id</prop><val text="rules" class="cur sel">rules</val></row>
+      <row tabs="0" type="tag"><tag text="div">div</tag><prop text="id">id</prop><val text="rules" >rules</val></row>
       <row tabs="1" type="tag"><tag text="div">div</tag><prop text="class">class</prop><val text="something">something</val></row>
-      <row tabs="2" type="tag"><tag text="div">div</tag></row>
-      <row class="hilite" tabs="0" type="tag"><tag text="div" class="cur sel">div</tag><prop text="class">class</prop><val text="something">something</val></row>
-      <row tabs="1" type="tag" class="com"><tag text="div">div</tag><prop text="class">class</prop><val text="text">text</val></row>
-      <row class="hilite com" tabs="2" type="txt"><txt class="cur sel" text="plaintext">plaintext</txt></row>
+      <row class="com" tabs="2" type="txt"><txt text="plaintext">plaintext</txt></row>
       <row tabs="1" type="txt"><txt text="plaintext">plaintext</txt></row>
+      <row tabs="0" type="tag"><tag text="div" >div</tag><prop text="class" class="sel">class</prop><val text="something" class="sel cur">something</val></row>
+      <row tabs="1" type="tag" class="com"><tag text="div">div</tag><prop text="class">class</prop><val text="text">text</val></row>
+      <row tabs="2" type="tag"><tag text="div">div</tag></row>
     </doc>
 
     <script src="js/utils.js"></script>
