rudimentary copy paste

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="js/selection.js"></script>
     <script src="js/mouse.js"></script>
     <script src="js/editing.js"></script>
+    <script src="js/clipboard.js"></script>
     <script src="js/keydown.js"></script>
     <script src="js/ranui.js"></script>
   </body>
