--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- DEV DOC -->
     <doc>
       <row tabs="0" type="tag"><tag text="div">div</tag><prop text="id">id</prop><val text="rules" >rules</val></row>
-      <row tabs="1" type="tag"><tag text="div">div</tag><prop text="class">class</prop><val text="something">something</val></row>
+      <row tabs="1" type="tag"><tag text="div">div</tag><prop text="id">id</prop><val text="unique">unique</val><prop text="class">class</prop><val text="something">something</val></row>
       <row class="com" tabs="2" type="txt"><txt text="plaintext">plaintext</txt></row>
       <row tabs="1" type="txt"><txt text="plaintext">plaintext</txt></row>
       <row tabs="0" type="tag"><tag text="div" >div</tag><prop text="class" class="sel">class</prop><val text="something" class="sel cur">something</val></row>
